--- a/styles/main.css
+++ b/styles/main.css
@@ -1,16 +1,32 @@
-/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */ 
+/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 html {
-    line-height: 1.15; /* 1 */
-    -webkit-text-size-adjust: 100%; /* 2 */
+    line-height: 1.15;
+    /* 1 */
+    -webkit-text-size-adjust: 100%;
+    /* 2 */
 }
 
 body {
-    background-color: #1d1111;
+    margin:0;
+    background-color: #35242C;
+    font-family: josefin sans, sans-serif;
+    color: aliceblue
 }
 
-a {
-    font-family: josefin sans, sans-serif;
-    color:aliceblue
+.intro {
+    margin-left: auto;
+    margin-right: auto;
+    width: 40em;
+    padding: 4em;
+}
+
+.intro .avatar {
+    margin-bottom:10px;
+    border-radius: 10%;
+}
+
+img {
+    border-style: outset;
 }
 
 @font-face {
@@ -19,7 +35,7 @@ a {
 }
 
 .link {
-    color:#ddd;
+    color: #ddd;
     text-decoration: none;
     border-bottom: solid 2px #ddd;
     padding-bottom: 2px;
@@ -28,36 +44,36 @@ a {
 }
 
 .link:hover {
-    color:deeppink;
-    border-bottom:solid 2px deeppink;
+    color: deeppink;
+    border-bottom: solid 2px deeppink;
 }
 
 .btn {
-    margin:10px;
-    border:none;
+    margin: 10px;
+    border: none;
     background: 0 0;
-    cursor:pointer
+    cursor: pointer
 }
 
 #navbar {
-    padding:20px 0;
-    background-color: rgb(25, 12, 12);  
+    padding: 20px 0;
+    background-color: #211D1F;
     width: 100%;
-    display:flex;
+    display: flex;
     justify-content: center;
 }
 
 #navbar .item {
     font-weight: 500;
-    padding:10px 0;
-    margin:0 30px;
+    padding: 10px 0;
+    margin: 0 30px;
 }
 
 #navbar .item.active {
-    color:deeppink;
-    border-bottom:solid 2px deeppink;
+    color: deeppink;
+    border-bottom: solid 2px deeppink;
 }
 
-h1 {
-    color:aliceblue
+h2 {
+    color: aliceblue
 }
