--- a/styles/main.css
+++ b/styles/main.css
@@ -17,9 +17,7 @@ body {
 }
 
 .content {
-    flex-direction: column;
     justify-content: center;
-    max-width: 1000;
     display: flex;
 }
 
@@ -32,7 +30,7 @@ body {
     margin-bottom: 10px;
     border-radius: 10%;
     width: 20em;
-    transform: translateX(-20%);
+    transform: translateX(-110%);
     justify-content: center;
     display: flex;
 }
@@ -91,6 +89,7 @@ img {
 }
 
 h2 {
+    margin: 0;
     color: aliceblue
 }
 
